--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,38 @@
 name: Deploy to Kubernetes
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # Change this to your AWS region
+
       - name: Login to AWS ECR
         run: |
-          echo "${{ secrets.AWS_ACCESS_KEY_ID }}" | docker login --username AWS --password-stdin <253284761052.dkr.ecr.ap-southeast-2.amazonaws.com/my-cicd-flask-app>
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 123456789012.dkr.ecr.us-east-1.amazonaws.com
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t <253284761052.dkr.ecr.ap-southeast-2.amazonaws.com/my-cicd-flask-app>/my-app:${{ github.sha }} .
-          docker push <253284761052.dkr.ecr.ap-southeast-2.amazonaws.com/my-cicd-flask-app>/my-app:${{ github.sha }}
+          docker build -t 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ github.sha }} .
+          docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ github.sha }}
+
+      - name: Update Kubeconfig to Connect to EKS
+        run: |
+          aws eks update-kubeconfig --region us-east-1 --name my-cluster
 
       - name: Update Kubernetes Deployment
         run: |
-          kubectl set image deployment/my-app my-app=<253284761052.dkr.ecr.ap-southeast-2.amazonaws.com/my-cicd-flask-app>/my-app:${{ github.sha }}
+          kubectl set image deployment/my-app my-app=123456789012.dkr.ecr.us-east-1.amazonaws.com/my-app:${{ github.sha }} -n default
